improving code documentation

--- a/doc/stylesheet.css
+++ b/doc/stylesheet.css
@@ -9,3 +9,11 @@
 .contents a:visited {
 	color: #551A8B;
 }
+
+.section.see dt {
+    display: none
+}
+
+.section.see dd {
+    margin-left: 0px;
+}
