--- a/doc/stylesheet.css
+++ b/doc/stylesheet.css
@@ -1,17 +1,51 @@
-.headertitle .title {
+#projectname, #projectbrief, body {
+    color: #434343;
+}
+
+#projectname, .headertitle .title, h1, h2, h2.groupheader, h3 {
+    font-weight: bold;
+}
+
+.headertitle .title, h1 {
     font-size: 2em;
 }
 
+h2, h2.groupheader {
+    font-size: 1.5em;
+}
+
+h3 {
+    font-size: 1.2em;
+}
+
+h1, h2, h2.groupheader {
+    border: initial;
+    padding: initial;
+    width: initial;
+    margin-top: 0.8em;
+    margin-bottom: 0.4em;
+}
+
+h1 {
+    border-bottom: 1px solid #989898;
+    padding-bottom: 0.2em;
+}
+
+h1.glow, h2.glow, h3.glow, h4.glow, h5.glow, h6.glow {
+    text-shadow: 0 0 10px #989898;
+}
+
 .contents a {
-	color: #0000EE;
+    color: #0000EE;
 }
 
 .contents a:visited {
-	color: #551A8B;
+    color: #551A8B;
 }
 
 .section.see dt {
-    display: none
+    all: initial;
+    display: none;
 }
 
 .section.see dd {
