--- a/doc/css/metal.css
+++ b/doc/css/metal.css
@@ -6,6 +6,18 @@
     border: 0px solid !important;
 }
 
+.navbar-nav>li, .navbar-nav {
+    float: left !important;
+}
+
+.navbar-nav.navbar-right:last-child {
+    margin-right: -15px !important;
+}
+
+.navbar-right {
+    float: right!important;
+}
+
 .nav-pills > li.active > a,
 .nav-pills > li.active > a:focus,
 .nav-pills > li.active > a:hover{
@@ -28,10 +40,11 @@
 
 .blur {
     position: fixed;
-    top:0;
+    left: 0;
+    top: 0;
     width: 100%;
     background: rgba(255,255,255,.8);
-    z-index:1010;
+    z-index: 1010;
     -webkit-filter: blur(0px);
     -moz-filter: blur(0px);
     -o-filter: blur(0px);
@@ -139,13 +152,18 @@ html, body {
 }
 
 .social-btns {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+.social-btns > ul {
+    display: inline-block;
+    margin: 0px;
 }
 
 .social-btns > ul > li {
     display: inline-block;
-    margin: 0;
+    margin: 0px;
 }
 
 .github-btn {
