getting rid of identity<>, it hasn't proven much useful

--- a/doc/css/metal.css
+++ b/doc/css/metal.css
@@ -99,6 +99,10 @@ div.fragment, pre.fragment {
     border-radius: 4px;
 }
 
+.section.user dd {
+    margin-left: 20px;
+}
+
 .section.see dt {
     all: initial;
     display: none;
