--- a/doc/css/metal.css
+++ b/doc/css/metal.css
@@ -1,23 +1,42 @@
-#toolbar > * {
-    border-bottom: 1px solid #EEEEEE;
+html, body {
+    height: 100%;
+    color: #464646;
 }
 
 .navbar-nav > li, .navbar-nav {
     float: left !important;
+    padding: 0;
+    margin: 0;
 }
 
 .navbar-right {
     float: right !important;
+    padding: 0;
+    margin: 0;
 }
 
+#content {
+    height: auto;
+    min-height: 100%;
+    padding-top: 60px;
+    padding-bottom: 100px;
+    margin-bottom: -100px;
+}
+
+#toolbar > * {
+    border-bottom: 1px solid #EEEEEE;
+}
+
+.nav-pills > li > a:hover,
 .nav-pills > li > a:focus,
-.nav-pills > li > a:hover {
+.nav-pills > li > a:active {
     background-color: #F9F9F9;
 }
 
 .nav-pills > li.active > a,
+.nav-pills > li.active > a:hover,
 .nav-pills > li.active > a:focus,
-.nav-pills > li.active > a:hover {
+.nav-pills > li.active > a:active {
     background-color: #464646;
 }
 
@@ -27,7 +46,7 @@
     padding-right: 0px;
 }
 
-#toc {
+.toc {
     background-color: #F9F9F9;
     border: 1px solid #EEEEEE;
     border-radius: 7px;
@@ -35,16 +54,12 @@
     padding: 10px;
 }
 
-#toc ul {
+.toc ul {
     list-style: outside none none;
 }
 
-#toc > ul > li > ul li {
+.toc > ul > li > ul li {
     margin-left: -15px;
-}
-
-#toc a, #toc a:visited, #toc a:focus, #toc a:active {
-    color: #464646;
 }
 
 a.anchor {
@@ -97,7 +112,7 @@ span.preprocessor {
 }
 
 span.charliteral, span.stringliteral {
-    color: #e08000;
+    color: #E08000;
 }
 
 .section.user dd {
@@ -108,30 +123,17 @@ span.octicon {
     margin-right: 5px;
 }
 
-html, body {
-    height: 100%;
-    color: #464646;
-}
-
-#main {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -100px;
-    padding: 0 0 100px;
-}
-
 #footer {
-    height: 80px;
+    height: 100px;
     font-size: 0.9em;
-    margin-top: 0px;
-    padding: 20px 0px;
-    border-top: 1px solid #EEEEEE;
     text-align: center;
+    padding-top: 20px;
+    border-top: 1px solid #EEEEEE;
 }
 
-.social-btns li {
+.social-btns .social-btn {
     display: inline-block;
-    margin: 0px;
+    margin: 0;
 }
 
 .github-btn {
