--- a/doc/css/metal.css
+++ b/doc/css/metal.css
@@ -61,11 +61,31 @@ html, body {
     padding-left: 1em;
 }
 
+h1:hover > a.anchor:after,
+h2:hover > a.anchor:after {
+    content: "§";
+    position: absolute;
+    visibility: visible;
+    width: 1em;
+    height: 1em;
+    left: -1em;
+    top: 65px;
+    cursor: pointer;
+    text-align: center;
+}
+
+a:not([href]) {
+    visibility: hidden;
+}
+
 a.anchor {
     display: block;
     position: relative;
-    visibility: hidden;
     top: -65px;
+}
+
+a:focus {
+    outline: none;
 }
 
 p {
@@ -76,9 +96,12 @@ p {
     margin-left: 20px;
 }
 
-.doxtable > tbody > tr > th,
-.doxtable > tfoot > tr > th,
-.doxtable > thead > tr > th {
+.doxtable th,
+.doxtable td {
+    text-align: center;
+}
+
+.doxtable th {
     color: white;
     background-color: #464646;
 }
