--- a/doc/css/metal.css
+++ b/doc/css/metal.css
@@ -77,6 +77,7 @@ h2:hover > a.anchor:after {
     top: 65px;
     cursor: pointer;
     text-align: center;
+    vertical-align: middle;
 }
 
 a:not([href]) {
