--- a/doc/css/metal.css
+++ b/doc/css/metal.css
@@ -153,7 +153,15 @@ span.charliteral, span.stringliteral {
     color: #E08000;
 }
 
-.section.user dd {
+dl.section {
+    margin: 0;
+}
+
+dl.section:not(.user) dt, dl.section:not(.user) dd {
+    display: inline;
+}
+
+dl.section.user dd {
     margin-left: 20px;
 }
 
