[doc] update to doxygen 1.8.16

--- a/doc/css/metal.css
+++ b/doc/css/metal.css
@@ -155,18 +155,14 @@ p {
 pre.fragment, code {
     background-color: #F9F9F9;
     color: #C7254E;
-    white-space: pre;
-    word-wrap: normal;
-    word-break: keep-all;
+}
+
+pre.fragment .line {
+    display: inline;
 }
 
 pre.fragment {
     border: 1px solid #EEEEEE;
-}
-
-pre.fragment div.line:after {
-    content: "\000A";
-    white-space: pre;
 }
 
 span.keyword, span.keywordflow, span.keywordtype {
